# strutil

./: CMakeLists.txt  README.md  strutil-config.cmake  strutil.cc
include/: strutil.h
test/: CMakeLists.txt  strutil_exec.cc
